Mon Nov  8 09:57:27 GMT 2004  Colin Watson  <cjwatson@debian.org>

	* lib/pathsearch.c: New file, containing functions for searching
	  $PATH.
	* lib/pathsearch.h: Prototype pathsearch_executable().
	* lib/Makefile.in: Always compile pathsearch.c.
	* src/man.c (find_in_path): Remove; replaced by
	  pathsearch_executable().
	  (gripe_no_man): Use pathsearch_executable() instead of
	  find_in_path().

Mon Nov  8 09:52:02 GMT 2004  Colin Watson  <cjwatson@debian.org>

	Get rid of plain getcwd(); this allows getting rid of most uses of
	PATH_MAX.

	* lib/getcwdalloc.c: New file, providing an allocating version of
	  getcwd().
	* lib/getcwdalloc.h: Prototype it.
	* lib/Makefile.in: Always compile getcwdalloc.c.

	* src/man.c (main, format_display): Use getcwd_allocated() instead
	  of getcwd().
	* src/mandb.c (main): Likewise.
	* src/manp.c (add_dir_to_path_list): Likewise.

Mon Nov  8 09:40:07 GMT 2004  Colin Watson  <cjwatson@debian.org>

	* lib/hashtable.c (null_hash_free): No-op hash_free_ptr provider,
	  for convenience.
	* lib/hashtable.h (null_hash_free): Prototype it.

Mon Nov  8 09:36:55 GMT 2004  Colin Watson  <cjwatson@debian.org>

	* acinclude.m4: Improve quoting to stop aclocal complaining. Improve
	  indentation. Get rid of unnecessary changequote().

Sun Nov  7 16:07:26 GMT 2004  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.c (pipeline_wait): Close pipeline output before
	  reaping processes, so that writing processes get SIGPIPE.

Sun Nov  7 16:05:08 GMT 2004  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.c (pipeline_wait): Fix active process debugging
	  output to include processes without statuses.

Sun Nov  7 16:01:26 GMT 2004  Colin Watson  <cjwatson@debian.org>

	* src/compression.c (decompress): Invalidate file_fd after closing
	  it.

Sun Nov  7 15:31:18 GMT 2004  Colin Watson  <cjwatson@debian.org>

	* src/man.c (compare_candidates): Compare extensions' positions in
	  section_list at the same time as sections, but do the lexical