@@ -1,3 +1,8 @@
+Sun Dec 12 21:48:04 CET 2004  Colin Watson  <cjwatson@debian.org>
+
+	* lib/pipeline.c (pipeline_sigchld): Don't bother saving and
+	  restoring errno if SIGCHLD is being queued.
+
 Mon Nov  8 09:57:27 GMT 2004  Colin Watson  <cjwatson@debian.org>
 
 	* lib/pathsearch.c: New file, containing functions for searching
